# hft-trading-system

./: .gitignore  CMakeLists.txt  README.md
benchmark/: order_book_benchmark.cpp
src/: binance_stream_main.cpp  main.cpp
src/common/: latency_stats.hpp  types.hpp
src/market_data/: binance_client.cpp  binance_client.hpp  binance_messages.hpp
src/order_book/: order_book.cpp  order_book.hpp
src/strategy/: strategy.hpp
